2004-03-31  Angus Leeming  <leeming@lyx.org>

	* lfuns.h:
	* LyXAction.C: new lfun LFUN_LYXRC_APPLY.

	* lyxrc.[Ch] (read, write): overloaded member functions taking
	a std::[io]stream arguments.

	* lyxfunc.C (getStatus, dispatch): handle LFUN_LYXRC_APPLY.

2004-03-31  Angus Leeming  <leeming@lyx.org>

	* lyxfunc.C (loadTextclass): new helper function, invoked by two of
	dispatch's case blocks, LFUN_TEXTCLASS_APPLY and LFUN_TEXTCLASS_LOAD.

	* lyxtextclass.C (load): if the text class couldn't be loaded, then
	don't overwrite 'loaded_ = false' with 'loaded_ = true' !

2004-03-31  Angus Leeming  <leeming@lyx.org>

	* lyxfunc.C (dispatch): remove the cursor-manipulation code from
	the LFUN_ALL_INSETS_TOGGLE code.

2004-03-30  Angus Leeming  <leeming@lyx.org>

	* lyxfunc.C (dispatch): the specialization Dialogs::showDocument
	has died. Fall through to the generic Dialogs::show("document").
	
2004-03-30  Angus Leeming  <leeming@lyx.org>

	* lfuns.h:
	* LyXAction.C: new lfuns LFUN_LANGUAGE_BUFFER, LFUN_TEXTCLASS_APPLY,
	LFUN_TEXTCLASS_LOAD, LFUN_SAVE_AS_DEFAULT, LFUN_BUFFERPARAMS_APPLY.

	* lyxfunc.C (getStatus, dispatch): define the actions for these
	lfuns. Little more than a cut and pste job from ControlDocument.C

	* lyxtextclass.[Ch] (loaded): accessor for the private bool loaded_.

2004-03-30  Angus Leeming  <leeming@lyx.org>

	* lfuns.h:
	* LyXAction.C (init): new lfuns, LFUN_KEYMAP_TOGGLE,
	LFUN_NEXT_INSET_TOGGLE, LFUN_ALL_INSETS_TOGGLE.

	* lyxfunc.C (dispatch): LFUN_ALL_INSETS_TOGGLE is used to toggle the
	open/closed state of ollapsable insets. Usage:

	all-inset-toggle <state> <name>, where
	<state> == "open" || "closed" || "toggle" and
	<name> is an identifier for a 'type' of inset. Eg "branch", "ert",...

	* lyxtext.h, text2.C (toggleInset): removed.

	* text3.C (dispatch): split the existing LFUN_INSET_TOGGLE in two,
	LFUN_KEYMAP_TOGGLE and LFUN_NEXT_INSET_TOGGLE. LFUN_NEXT_INSET_TOGGLE
	now passes LFUN_INSET_TOGGLE to the found inset.
